--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -14,9 +14,10 @@ html {scroll-behavior: smooth; -webkit-font-smoothing: antialiased;}
 .lay-3 {height: 15vh;}
 
 /* layout */
-.lay-dmg, .lay-prl, .lay-trs, .lay-txt {height: 70vh;}
+.lay-prl, .lay-trs, .lay-txt {height: 70vh;}
 .lay-app {height: 20vh;}
 .lay-btn {background-color: #FFF; z-index: 90000;}
+.lay-dmg {font-size: 15px;}
 
 /* scroll */
 .scrollbar {overflow-x: hidden; overflow-y: scroll;}
@@ -94,3 +95,7 @@ sup {top: -1em !important;}
 /* note */
 span[data-type="ph-nt"] {color: #99603D;}
 .ph-nt-select {text-decoration: 3px #99603D underline; -webkit-text-decoration-line:  underline !important; -webkit-text-decoration-color: #99603D !important; -webkit-text-decoration-style: solid !important; -webkit-text-decoration-thickness: 3px !important;}
+
+/* dividers */
+*[data-type="divider-lac"]::after {content: "\2013";}
+*[data-type="divider-lem"]::after {content: "\005D";}
