--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -23,6 +23,7 @@ html {scroll-behavior: smooth; -webkit-font-smoothing: antialiased;}
 .scrollbar {overflow-x: hidden; overflow-y: scroll;}
 
 /* collapse */
+a, .btn-collapse {cursor: pointer;}
 .btn-collapse::after {content: "\25be"; height: auto; top: -2px; margin-left: 5px;}
 .btn-collapse[aria-expanded="true"]::after {content: "\25B4";}
 
@@ -90,7 +91,7 @@ html {scroll-behavior: smooth; -webkit-font-smoothing: antialiased;}
 
 .app-select, .app-click:hover {background: #80C3CF5D;}
 *[data-type="parallel"].app-click:hover {background: rgba(0, 0, 0, 0);}
-.prl-select {background: rgba(255, 166, 0, 0.733);}
+.prl-select {background: #FFD280;}
 
 /* apparatus > omission */
 *[data-type="app-om-ins"], *[data-type="app-om-lm"], *[data-type="app-om-rdg"], *[data-type="rdg"] *[data-type="double-danda"], *[data-type="single-danda"] {font-style: normal !important;}
@@ -116,11 +117,10 @@ span[data-type="ph-nt"] {color: #99603D;}
 *[data-type="divider-lem"]::after {content: "\005D";}
 
 /* parallels */
-.card-prl {background-color: rgba(255, 166, 0, 0.733) !important;}
+.card-prl {background-color: #FFD280 !important;}
 .prl-bibl {font-size: 12px;}
 .lay-prl *[data-type="parallel"] {font-size: 15px;}
 .lay-prl *[data-type="parallel"]:hover {background-color: rgba(255, 166, 0, 0.733);}
-.btn-collapse[data-target="prl"] {color: rgb(255, 166, 0); font-size: 12px;}
+.btn-collapse[data-target="prl"] {color: #E65C00; font-size: 12px;}
 .btn-collapse[data-target="prl"]:hover {color: rgb(197, 128, 0);}
-.prl-select-btn {color: #FFF !important; font-weight: 500;}
 .prl-sec {height: 30vh; overflow-x: hidden; overflow-y: scroll; resize: vertical;}
